creating medical_text_clustering

--- a/analysis/scispacy_basics.ipynb
+++ b/analysis/scispacy_basics.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spacy and SciSpacy \n",
+    "\n",
+    "[Spacy](https://spacy.io/usage/processing-pipelines) is one of the main NLP open-source libraries and contributors.\n",
+    "\n",
+    "They have a vast amount of methods, pipelines, pre-trained models, tools and tutorials for NLP. Anything from cleaning, linguistic analysis and advanced modelling capabilties are available in Spacy. \n",
+    "\n",
+    "One of their most interesting capabilities is found on their related SciSpacy module, that brings several biomedical models and tools for Medical NLP analysis. \n",
+    "\n",
+    "This notebooks covers a few of the basic topics in the Spacy tool-kit\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports \n",
     "import spacy\n",
     "import scispacy\n",
     "import pandas\n",
@@ -15,10 +32,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Basic functionalities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alterations -> alteration NOUN NNS nsubj Xxxxx\n",
+      "hypocretin -> hypocretin NOUN NN compound xxxx\n",
+      "receptor -> receptor NOUN NN nmod xxxx\n",
+      "2 -> 2 NUM CD nummod d\n",
+      "preprohypocretin -> preprohypocretin NOUN NN conj xxxx\n",
+      "genes -> gene NOUN NNS dep xxxx\n",
+      "produce -> produce VERB VBP ROOT xxxx\n",
+      "narcolepsy -> narcolepsy NOUN NN dobj xxxx\n",
+      "people -> people NOUN NNS nmod xxxx\n",
+      ". -> . PUNCT . punct .\n"
+     ]
+    }
+   ],
    "source": [
     "text: str = \"Alterations in the hypocretin receptor 2 and preprohypocretin genes produce narcolepsy in people.\"\n",
     "# add multiple NLP based attributes and methods to the text\n",
@@ -30,8 +71,12 @@
     "for token in doc:\n",
     "    if not token.is_stop:\n",
     "        print(\n",
-    "            token.text, \"->\", token.lemma_, token.pos_, token.tag_, token.dep_,\n",
-    "            token.shape_\n",
+    "            token.text, \"->\",\n",
+    "            token.lemma_,  # lemmatizer\n",
+    "            token.pos_,  # Part of Speech\n",
+    "            token.tag_,  # Tag \n",
+    "            token.dep_,  # Dependencies\n",
+    "            token.shape_  # Shape -> Caps, Case representation\n",
     "        )"
    ]
   },
@@ -143,15 +188,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8859446651287843"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# We can do the same with senteces (Spacy uses vector avg to compare sentences)\n",
+    "# We can do the same with senteces \n",
+    "# Spacy first calculates the mean of the sentence\n",
+    "# vector to compare across sentences. \n",
     "text1 = \"Tylenol is used to treat headaches\"\n",
     "text2 = \"Ibuprofen is used to alleviate migraines\"\n",
     "\n",
     "nlp(text1).similarity(nlp(text2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.36390787197943425"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A completely unrelated sentece.\n",
+    "text3 = \"There is no place like home\"\n",
+    "\n",
+    "nlp(text1).similarity(nlp(text3))"
    ]
   },
   {
@@ -165,6 +246,32 @@
     "word_id = nlp.vocab.strings[word]\n",
     "word_vector = nlp.vocab.vectors[word_id]\n",
     "print(word_vector[:50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.06580266, -0.04703693,  0.04574509,  0.00016707,  0.04481339,\n",
+       "        0.0608971 ,  0.02285377,  0.01628545,  0.00729252, -0.08500666,\n",
+       "       -0.03176558, -0.16500899,  0.00211045, -0.06342937,  0.00753508,\n",
+       "       -0.02838399,  0.0249574 , -0.06058757, -0.02614175,  0.04055803],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also get the vector of a sentece \n",
+    "\n",
+    "nlp(\"Hello, this is a sentece\").vector[:20]\n"
    ]
   },
   {
@@ -299,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
