--- a/analysis/scispacy_basics.ipynb
+++ b/analysis/scispacy_basics.ipynb
@@ -24,10 +24,11 @@
    "source": [
     "# Imports \n",
     "import spacy\n",
-    "import scispacy\n",
-    "import pandas\n",
+    "from scispacy.linking import EntityLinker\n",
     "\n",
     "# Load the model\n",
+    "# warning make sure you download the relevant model first.\n",
+    "# check README for instructions.\n",
     "nlp = spacy.load(\"en_core_sci_md\")\n"
    ]
   },
@@ -86,17 +87,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp.add_pipe(\"scispacy_linker\", config={\"resolve_abbreviations\": True, \"linker_name\": \"umls\"})\n",
+    "nlp.add_pipe(\"entity_linker\", config={\"resolve_abbreviations\": True, \"linker_name\": \"umls\"})\n",
     "\n",
     "# This line takes a while, because we have to download ~1GB of data\n",
     "# and load a large JSON file (the knowledge base). Be patient!\n",
@@ -107,10 +103,12 @@
     "# the AbbreviationDetector pipe and setting resolve_abbreviations to True means\n",
     "# that linking will only be performed on the long form of abbreviations.\n",
     "\n",
-    "doc = nlp(\"Spinal and bulbar muscular atrophy (SBMA) is an \\\n",
-    "           inherited motor neuron disease caused by the expansion \\\n",
-    "           of a polyglutamine tract within the androgen receptor (AR). \\\n",
-    "           SBMA can be caused by this easily.\")"
+    "doc = nlp(\n",
+    "    \"Spinal and bulbar muscular atrophy (SBMA) is an \\\n",
+    "    inherited motor neuron disease caused by the expansion \\\n",
+    "    of a polyglutamine tract within the androgen receptor (AR). \\\n",
+    "    SBMA can be caused by this easily.\"\n",
+    ")"
    ]
   },
   {
