Small fix in the SciSpacy NB

--- a/analysis/scispacy_basics.ipynb
+++ b/analysis/scispacy_basics.ipynb
@@ -92,8 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp.add_pipe(\"entity_linker\", config={\"resolve_abbreviations\": True, \"linker_name\": \"umls\"})\n",
-    "\n",
     "# This line takes a while, because we have to download ~1GB of data\n",
     "# and load a large JSON file (the knowledge base). Be patient!\n",
     "# Thankfully it should be faster after the first time you use it, because\n",
@@ -103,6 +101,15 @@
     "# the AbbreviationDetector pipe and setting resolve_abbreviations to True means\n",
     "# that linking will only be performed on the long form of abbreviations.\n",
     "\n",
+    "nlp.add_pipe(\"scispacy_linker\", config={\"resolve_abbreviations\": True, \"linker_name\": \"umls\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "doc = nlp(\n",
     "    \"Spinal and bulbar muscular atrophy (SBMA) is an \\\n",
     "    inherited motor neuron disease caused by the expansion \\\n",
@@ -318,20 +325,6 @@
     "t_ = round((time() - t) / 60, 2)  # seconds needed to run\n",
     "print(f'Execution time: {t_} mins')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
