adding Scipacy similarity

--- a/analysis/scispacy_basics.ipynb
+++ b/analysis/scispacy_basics.ipynb
@@ -229,6 +229,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Semantic similarity example\n",
+    "\n",
+    "In NLP, one of the biggest breakthroughs came when the Word2Vec model was able \"answer\" to the famous analogy riddle. `King` is to `man` as `woman` is to ____. For humans, it's easy to find the analogy and responde correctly `queen`, however this was thought to be almost impossible for an AI. In a vector representation, these could be noted as `x = king - man + woman`. When using the original Word2Vec model, the resulting vector will be very close to the vector for `queen`, hence adding a whole new dimmention to NLP and AI. \n",
+    "\n",
+    "We can do something similar with the bio-medical model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import distance\n",
+    "import numpy as np\n",
+    "\n",
+    "king = nlp(\"cardiologist\").vector\n",
+    "man = nlp(\"heart\").vector\n",
+    "woman = nlp(\"brain\").vector\n",
+    "\n",
+    "result = king - man + woman\n",
+    "\n",
+    "# Format the vocabulary for use in the distance function\n",
+    "ids = [x for x in nlp.vocab.vectors.keys()]\n",
+    "vectors = [nlp.vocab.vectors[x] for x in ids]\n",
+    "vectors = np.array(vectors)\n",
+    "\n",
+    "\n",
+    "# *** Find the closest word below ***\n",
+    "closest_index = distance.cdist(np.array(result.reshape(1,-1)), vectors).argmin()\n",
+    "word_id = ids[closest_index]\n",
+    "output_word = nlp.vocab[word_id].text\n",
+    "output_word\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Spacy's Pipelines\n",
     "\n",
     "However, I would say Spacy's greatest feature is its capacity to create a Pipe (pipeline) with multiple transformations. It allows you to set up an elaborate pre-processing pipeline to efficiently clean, tag and analyse your text input. For example, let's create a cleaning pipeline, in which we can remove some of the attributes and models to make it run faster.\n"
@@ -300,12 +339,13 @@
     "    cleaning(doc) for doc in nlp.pipe(\n",
     "        transcriptions,\n",
     "        batch_size=20,\n",
-    "        n_process=-1  # number of processors to use. \n",
+    "        n_process=1  # number of processors to use. \n",
     "    )\n",
     "]\n",
     "# medimos tiempo de ejecución \n",
     "t_ = round((time() - t) / 60, 2)  # seconds needed to run\n",
-    "print(f'Execution time: {t_} mins')"
+    "print(f'Execution time: {t_} mins')\n",
+    "print(txt[0])"
    ]
   },
   {
